--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nuxtjs/style-resources": "^1.0.0",
     "glob": "^7.1.6",
     "highlight.js": "^9.18.1",
+    "normalize.css": "^8.0.1",
     "nuxt": "^2.11.0",
     "vuex": "^3.1.2"
   },
