- mataのmixins化 - css imgの見切れ修正 - tableのデザイン - blockquoteのデザイン - footer aのcss変更 - sample-mdの変更 - aboutの変更 - issuesページの作成

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nuxt_blog_template",
   "version": "1.0.0",
   "description": "nuxt_blog_template",
-  "author": "urawa72",
+  "author": "urawa72, u1",
   "private": true,
   "scripts": {
     "dev": "nuxt",
